--- a/libft/Makefile
+++ b/libft/Makefile
@@ -25,11 +25,11 @@ OBJS = $(patsubst %.c, %.o, $(SRCS))
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	ar rc $@ $^
-	ranlib $@
+	@ar rc $@ $^
+	@ranlib $@
 
 %.o: %.c $(HEADER)
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 ft_%printf%.o: ft_%printf%.c $(PRINTF_HEADER)
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -41,10 +41,10 @@ error_functions%.o: error_functions%.c $(ERROR_FUNCTIONS_HEADER)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	@rm -f $(OBJS)
 
 fclean: clean
-	rm -f $(NAME)
+	@rm -f $(NAME)
 
 re: fclean all
 
